force-app/main/default/objects/Customer_Portal_Notification__c/Customer_Portal_Notification__c.object-meta.xml
<CustomObject>
    <label>Customer Portal Notification</label>
    <nameField>
        <displayFormat>CPN-{0000}</displayFormat>
        <label>Customer Portal Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Portal Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>