force-app/main/default/objects/Customer_Portal_Notification__c/fields/Created_For_CC__c.field-meta.xml
<CustomField>
    <fullName>Created_For_CC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created For CC</label>
    <type>Checkbox</type>
</CustomField>