force-app/main/default/objects/Customer_Portal_Notification__c/fields/Customer_Master__c.field-meta.xml
<CustomField>
    <fullName>Customer_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Master</label>
    <referenceTo>Customer_Master__c</referenceTo>
    <relationshipLabel>Customer Portal Notifications</relationshipLabel>
    <relationshipName>Customer_Portal_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>