force-app/main/default/objects/Customer_Portal_Notification__c/fields/isRead__c.field-meta.xml
<CustomField>
    <fullName>isRead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Read</label>
    <type>Checkbox</type>
</CustomField>