force-app/main/default/objects/Customer_Portal_Notification__c/fields/Notification_Category__c.field-meta.xml
<CustomField>
    <fullName>Notification_Category__c</fullName>
    <label>Notification Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>