force-app/main/default/objects/Customer_Portal_Notification__c/fields/Notification_Content__c.field-meta.xml
<CustomField>
    <fullName>Notification_Content__c</fullName>
    <label>Notification Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>