force-app/main/default/objects/Customer_Portal_Notification__c/fields/Notification_Heading__c.field-meta.xml
<CustomField>
    <fullName>Notification_Heading__c</fullName>
    <label>Notification Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>