force-app/main/default/objects/Customer_Portal_Notification__c/fields/Notification_Time__c.field-meta.xml
<CustomField>
    <fullName>Notification_Time__c</fullName>
    <label>Notification Time</label>
    <type>DateTime</type>
</CustomField>