force-app/main/default/objects/Customer_Portal_Notification__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead Notification</fullName>
            </value>
            <value>
                <fullName>Demand Type</fullName>
            </value>
            <value>
                <fullName>Receipt Type</fullName>
            </value>
            <value>
                <fullName>Ticket Type</fullName>
            </value>
            <value>
                <fullName>Milestone Type</fullName>
            </value>
            <value>
                <fullName>Booking Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>