force-app/main/default/objects/Customer_Portal_Notification__c/fields/One_signal_Notifcation_Id__c.field-meta.xml
<CustomField>
    <fullName>One_signal_Notifcation_Id__c</fullName>
    <label>One Signal Notification Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>