force-app/main/default/objects/Customer_Portal_Notification__c/fields/Updated_Status__c.field-meta.xml
<CustomField>
    <fullName>Updated_Status__c</fullName>
    <label>Updated Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>